--- a/src/app.css
+++ b/src/app.css
@@ -55,6 +55,7 @@ body {
 		--border: 240, 4%, 5%;
 		--input: 214.3 31.8% 91.4%;
 		--ring: 222.2 84% 4.9%;
+		--hover: 240 3% 5%;
 
 		--radius: 0.5rem;
 
