--- a/src/app.css
+++ b/src/app.css
@@ -90,6 +90,7 @@ body {
 		--border: 212 9% 73%;
 		--input: 217.2 32.6% 17.5%;
 		--ring: 212.7 26.8% 83.9%;
+		--hover: 240 3% 25%;
 
 		--subtle: 210 3% 31%;
 	}
